--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -277,15 +277,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "dtk_002dspeak.html#index-_003cfn_003e-_002e"><code>&lt;fn&gt;
-      .</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "dtk_002dspeak.html">dtk-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-_003cfn_003e-_002f"><code>&lt;fn&gt;
       /</code></a>:</td>
       <td>&nbsp;</td>
@@ -1105,6 +1096,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "dtk_002dspeak.html#index-_003cfn_003e-d-_002e"><code>&lt;fn&gt;
+      d .</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "dtk_002dspeak.html">dtk-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "dtk_002dspeak.html#index-_003cfn_003e-d-0"><code>&lt;fn&gt;
       d 0</code></a>:</td>
       <td>&nbsp;</td>
@@ -1443,14 +1443,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "cd_002dtool.html#index-_003cfn_003e-DEL"><code>&lt;fn&gt;
-      DEL</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href="cd_002dtool.html">cd-tool</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3528,15 +3520,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "dtk_002dspeak.html#index-C_002de-_002e"><code>C-e
-      .</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "dtk_002dspeak.html">dtk-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "Reading.html#index-C_002de-_002f"><code>C-e
       /</code></a>:</td>
       <td>&nbsp;</td>
@@ -4466,6 +4449,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "dtk_002dspeak.html#index-C_002de-d-_002e"><code>C-e d
+      .</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "dtk_002dspeak.html">dtk-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "dtk_002dspeak.html#index-C_002de-d-0"><code>C-e d
       0</code></a>:</td>
       <td>&nbsp;</td>
@@ -4966,14 +4958,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "cd_002dtool.html#index-C_002de-DEL"><code>C-e
-      DEL</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href="cd_002dtool.html">cd-tool</a></td>
     </tr>
     <tr>
       <td></td>
