--- a/manual/cd_002dtool.html
+++ b/manual/cd_002dtool.html
@@ -76,12 +76,7 @@
     <dt id="index-cd_002dtool">Command:
     <strong>cd-tool</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e DEL</kbd></dt>
-        <dd><span id="index-C_002de-DEL"></span></dd>
-        <dt><kbd>&lt;fn&gt; DEL</kbd></dt>
-        <dd><span id="index-_003cfn_003e-DEL"></span></dd>
-      </dl><span id="index-cd_002dtool-1"></span>
+      <span id="index-cd_002dtool-1"></span>
       <div class="format">
         <pre class="format">Front-end to CDTool.
 Key     Action
