--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -771,8 +771,28 @@ Seconds value is also placed in the kill-ring.
 </pre>
       </div>
     </dd>
-  </dl><span id="emacspeak_002dspeak_002dface_002dforward"></span>
+  </dl><span id="emacspeak_002dspeak_002dface_002dbrowse"></span>
   <h4 class="subsubsection">12.174.1.35
+  emacspeak-speak-face-browse</h4>
+  <dl>
+    <dt id="index-emacspeak_002dspeak_002dface_002dbrowse">Command:
+    <strong>emacspeak-speak-face-browse</strong></dt>
+    <dd>
+      <dl compact="compact">
+        <dt><kbd>C-e C-.</kbd></dt>
+        <dd><span id="index-C_002de-C_002d_002e"></span></dd>
+        <dt><kbd>&lt;fn&gt; C-.</kbd></dt>
+        <dd><span id="index-_003cfn_003e-C_002d_002e"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dspeak_002dface_002dbrowse-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Use C-f and C-b to browse by current face.
+</pre>
+      </div>
+    </dd>
+  </dl><span id="emacspeak_002dspeak_002dface_002dforward"></span>
+  <h4 class="subsubsection">12.174.1.36
   emacspeak-speak-face-forward</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dface_002dforward">
@@ -786,25 +806,6 @@ Seconds value is also placed in the kill-ring.
       <div class="format">
         <pre class=
         "format">Property search for face — see M-x text-property-search-forward
-</pre>
-      </div>
-    </dd>
-  </dl><span id="emacspeak_002dspeak_002dface_002drange"></span>
-  <h4 class="subsubsection">12.174.1.36
-  emacspeak-speak-face-range</h4>
-  <dl>
-    <dt id="index-emacspeak_002dspeak_002dface_002drange">Command:
-    <strong>emacspeak-speak-face-range</strong></dt>
-    <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e C-.</kbd></dt>
-        <dd><span id="index-C_002de-C_002d_002e"></span></dd>
-        <dt><kbd>&lt;fn&gt; C-.</kbd></dt>
-        <dd><span id="index-_003cfn_003e-C_002d_002e"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dspeak_002dface_002drange-1"></span>
-      <div class="format">
-        <pre class="format">Speak face range at point
 </pre>
       </div>
     </dd>
@@ -1398,8 +1399,23 @@ is the same as for the Emacs builtin ‘other-window’.
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dspeak_002drange"></span>
+  <h4 class="subsubsection">12.174.1.61 emacspeak-speak-range</h4>
+  <dl>
+    <dt id="index-emacspeak_002dspeak_002drange">Command:
+    <strong>emacspeak-speak-range</strong> <em>(&amp;optional
+    prop)</em></dt>
+    <dd>
+      <span id="index-emacspeak_002dspeak_002drange-1"></span>
+      <div class="format">
+        <pre class="format">Speak and return  range at point
+
+(fn &amp;optional PROP)
+</pre>
+      </div>
+    </dd>
   </dl><span id="emacspeak_002dspeak_002drectangle"></span>
-  <h4 class="subsubsection">12.174.1.61
+  <h4 class="subsubsection">12.174.1.62
   emacspeak-speak-rectangle</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002drectangle-1">Command:
@@ -1423,7 +1439,7 @@ program, arguments specify the START and END of the rectangle.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dregion"></span>
-  <h4 class="subsubsection">12.174.1.62 emacspeak-speak-region</h4>
+  <h4 class="subsubsection">12.174.1.63 emacspeak-speak-region</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dregion-1">Command:
     <strong>emacspeak-speak-region</strong> <em>(start
@@ -1445,7 +1461,7 @@ program, arguments specify the START and END of the rectangle.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002drest_002dof_002dbuffer"></span>
-  <h4 class="subsubsection">12.174.1.63
+  <h4 class="subsubsection">12.174.1.64
   emacspeak-speak-rest-of-buffer</h4>
   <dl>
     <dt id=
@@ -1467,7 +1483,7 @@ program, arguments specify the START and END of the rectangle.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002drun_002dshell_002dcommand"></span>
-  <h4 class="subsubsection">12.174.1.64
+  <h4 class="subsubsection">12.174.1.65
   emacspeak-speak-run-shell-command</h4>
   <dl>
     <dt id=
@@ -1500,7 +1516,7 @@ normally bound to C-e M-i.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dseconds_002dsince_002depoch"></span>
-  <h4 class="subsubsection">12.174.1.65
+  <h4 class="subsubsection">12.174.1.66
   emacspeak-speak-seconds-since-epoch</h4>
   <dl>
     <dt id=
@@ -1520,7 +1536,7 @@ normally bound to C-e M-i.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dsentence"></span>
-  <h4 class="subsubsection">12.174.1.66
+  <h4 class="subsubsection">12.174.1.67
   emacspeak-speak-sentence</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dsentence">Command:
@@ -1538,7 +1554,7 @@ Negative prefix arg speaks from start of sentence to point.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dsexp"></span>
-  <h4 class="subsubsection">12.174.1.67 emacspeak-speak-sexp</h4>
+  <h4 class="subsubsection">12.174.1.68 emacspeak-speak-sexp</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dsexp-1">Command:
     <strong>emacspeak-speak-sexp</strong> <em>(&amp;optional
@@ -1561,7 +1577,7 @@ Negative prefix arg speaks from start of sexp to point.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dsexp_002dinteractively"></span>
-  <h4 class="subsubsection">12.174.1.68
+  <h4 class="subsubsection">12.174.1.69
   emacspeak-speak-sexp-interactively</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dsexp_002dinteractively">
@@ -1580,7 +1596,7 @@ any other key to speak entire sexp.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dskim_002dbuffer"></span>
-  <h4 class="subsubsection">12.174.1.69
+  <h4 class="subsubsection">12.174.1.70
   emacspeak-speak-skim-buffer</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dskim_002dbuffer">Command:
@@ -1601,7 +1617,7 @@ any other key to speak entire sexp.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dspaces_002dat_002dpoint"></span>
-  <h4 class="subsubsection">12.174.1.70
+  <h4 class="subsubsection">12.174.1.71
   emacspeak-speak-spaces-at-point</h4>
   <dl>
     <dt id=
@@ -1628,7 +1644,7 @@ any other key to speak entire sexp.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dspell_002dcurrent_002dword"></span>
-  <h4 class="subsubsection">12.174.1.71
+  <h4 class="subsubsection">12.174.1.72
   emacspeak-speak-spell-current-word</h4>
   <dl>
     <dt id=
@@ -1644,7 +1660,7 @@ any other key to speak entire sexp.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dtime"></span>
-  <h4 class="subsubsection">12.174.1.72 emacspeak-speak-time</h4>
+  <h4 class="subsubsection">12.174.1.73 emacspeak-speak-time</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dtime-1">Command:
     <strong>emacspeak-speak-time</strong> <em>(&amp;optional
@@ -1667,40 +1683,8 @@ Second interactive prefix sets clock to new timezone.
 </pre>
       </div>
     </dd>
-  </dl><span id=
-  "emacspeak_002dspeak_002dunface_002dbackward"></span>
-  <h4 class="subsubsection">12.174.1.73
-  emacspeak-speak-unface-backward</h4>
-  <dl>
-    <dt id="index-emacspeak_002dspeak_002dunface_002dbackward">
-    Command: <strong>emacspeak-speak-unface-backward</strong></dt>
-    <dd>
-      <span id=
-      "index-emacspeak_002dspeak_002dunface_002dbackward-1"></span>
-      <div class="format">
-        <pre class=
-        "format">Property search for face — see M-x text-property-search-backward
-</pre>
-      </div>
-    </dd>
-  </dl><span id=
-  "emacspeak_002dspeak_002dunface_002dforward"></span>
-  <h4 class="subsubsection">12.174.1.74
-  emacspeak-speak-unface-forward</h4>
-  <dl>
-    <dt id="index-emacspeak_002dspeak_002dunface_002dforward">
-    Command: <strong>emacspeak-speak-unface-forward</strong></dt>
-    <dd>
-      <span id=
-      "index-emacspeak_002dspeak_002dunface_002dforward-1"></span>
-      <div class="format">
-        <pre class=
-        "format">Property search for face at point — see M-x text-property-search-forward
-</pre>
-      </div>
-    </dd>
   </dl><span id="emacspeak_002dspeak_002dversion"></span>
-  <h4 class="subsubsection">12.174.1.75
+  <h4 class="subsubsection">12.174.1.74
   emacspeak-speak-version</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dversion-1">Command:
@@ -1724,7 +1708,7 @@ Optional interactive prefix arg ‘speak-rev’ speaks only the Git revision num
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dvisual_002dline"></span>
-  <h4 class="subsubsection">12.174.1.76
+  <h4 class="subsubsection">12.174.1.75
   emacspeak-speak-visual-line</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dvisual_002dline">Command:
@@ -1740,7 +1724,7 @@ Cues the start of a physical line with auditory icon ‘left’.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dvoice_002dannotate_002dparagraphs"></span>
-  <h4 class="subsubsection">12.174.1.77
+  <h4 class="subsubsection">12.174.1.76
   emacspeak-speak-voice-annotate-paragraphs</h4>
   <dl>
     <dt id=
@@ -1761,7 +1745,7 @@ Useful to do this before you listen to an entire buffer.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dwhich_002dfunction"></span>
-  <h4 class="subsubsection">12.174.1.78
+  <h4 class="subsubsection">12.174.1.77
   emacspeak-speak-which-function</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dwhich_002dfunction">
@@ -1783,7 +1767,7 @@ which-func without turning that mode on.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dwindow_002dinformation"></span>
-  <h4 class="subsubsection">12.174.1.79
+  <h4 class="subsubsection">12.174.1.78
   emacspeak-speak-window-information</h4>
   <dl>
     <dt id=
@@ -1805,7 +1789,7 @@ which-func without turning that mode on.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dword"></span>
-  <h4 class="subsubsection">12.174.1.80 emacspeak-speak-word</h4>
+  <h4 class="subsubsection">12.174.1.79 emacspeak-speak-word</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dword-1">Command:
     <strong>emacspeak-speak-word</strong> <em>(&amp;optional
@@ -1830,7 +1814,7 @@ spelled out  instead of being spoken.
     </dd>
   </dl><span id=
   "emacspeak_002dspeak_002dword_002dinteractively"></span>
-  <h4 class="subsubsection">12.174.1.81
+  <h4 class="subsubsection">12.174.1.80
   emacspeak-speak-word-interactively</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dword_002dinteractively">
@@ -1849,7 +1833,7 @@ any other key to speak entire word.
       </div>
     </dd>
   </dl><span id="emacspeak_002dspeak_002dworld_002dclock"></span>
-  <h4 class="subsubsection">12.174.1.82
+  <h4 class="subsubsection">12.174.1.81
   emacspeak-speak-world-clock</h4>
   <dl>
     <dt id="index-emacspeak_002dspeak_002dworld_002dclock">Command:
@@ -1869,7 +1853,7 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
     </dd>
   </dl><span id=
   "emacspeak_002dswitch_002dto_002dreference_002dbuffer"></span>
-  <h4 class="subsubsection">12.174.1.83
+  <h4 class="subsubsection">12.174.1.82
   emacspeak-switch-to-reference-buffer</h4>
   <dl>
     <dt id=
@@ -1887,7 +1871,7 @@ Optional second arg ‘set’ sets the TZ environment variable as well.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002daction_002dmode"></span>
-  <h4 class="subsubsection">12.174.1.84
+  <h4 class="subsubsection">12.174.1.83
   emacspeak-toggle-action-mode</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002daction_002dmode">
@@ -1906,7 +1890,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002daudio_002dindentation"></span>
-  <h4 class="subsubsection">12.174.1.85
+  <h4 class="subsubsection">12.174.1.84
   emacspeak-toggle-audio-indentation</h4>
   <dl>
     <dt id=
@@ -1935,7 +1919,7 @@ results in the number of initial spaces being spoken.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dcharacter_002decho"></span>
-  <h4 class="subsubsection">12.174.1.86
+  <h4 class="subsubsection">12.174.1.85
   emacspeak-toggle-character-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dcharacter_002decho-1">
@@ -1958,7 +1942,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dheader_002dline"></span>
-  <h4 class="subsubsection">12.174.1.87
+  <h4 class="subsubsection">12.174.1.86
   emacspeak-toggle-header-line</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dheader_002dline">
@@ -1972,7 +1956,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dline_002decho"></span>
-  <h4 class="subsubsection">12.174.1.88
+  <h4 class="subsubsection">12.174.1.87
   emacspeak-toggle-line-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dline_002decho-1">
@@ -1994,7 +1978,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dmail_002dalert"></span>
-  <h4 class="subsubsection">12.174.1.89
+  <h4 class="subsubsection">12.174.1.88
   emacspeak-toggle-mail-alert</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dmail_002dalert">Command:
@@ -2018,7 +2002,7 @@ indicating the arrival  of new mail when displaying the mode line.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dshow_002dpoint"></span>
-  <h4 class="subsubsection">12.174.1.90
+  <h4 class="subsubsection">12.174.1.89
   emacspeak-toggle-show-point</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dshow_002dpoint">Command:
@@ -2041,7 +2025,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter"></span>
-  <h4 class="subsubsection">12.174.1.91
+  <h4 class="subsubsection">12.174.1.90
   emacspeak-toggle-speak-line-invert-filter</h4>
   <dl>
     <dt id=
@@ -2067,7 +2051,7 @@ current local  value to the result.
     </dd>
   </dl><span id=
   "emacspeak_002dtoggle_002dspeak_002dmessages"></span>
-  <h4 class="subsubsection">12.174.1.92
+  <h4 class="subsubsection">12.174.1.91
   emacspeak-toggle-speak-messages</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dspeak_002dmessages">
@@ -2088,7 +2072,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dtoggle_002dword_002decho"></span>
-  <h4 class="subsubsection">12.174.1.93
+  <h4 class="subsubsection">12.174.1.92
   emacspeak-toggle-word-echo</h4>
   <dl>
     <dt id="index-emacspeak_002dtoggle_002dword_002decho-1">
@@ -2110,7 +2094,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dview_002dnotifications"></span>
-  <h4 class="subsubsection">12.174.1.94
+  <h4 class="subsubsection">12.174.1.93
   emacspeak-view-notifications</h4>
   <dl>
     <dt id="index-emacspeak_002dview_002dnotifications">Command:
@@ -2131,7 +2115,7 @@ current local  value to the result.
       </div>
     </dd>
   </dl><span id="emacspeak_002dzap_002dtts"></span>
-  <h4 class="subsubsection">12.174.1.95 emacspeak-zap-tts</h4>
+  <h4 class="subsubsection">12.174.1.94 emacspeak-zap-tts</h4>
   <dl>
     <dt id="index-emacspeak_002dzap_002dtts">Command:
     <strong>emacspeak-zap-tts</strong></dt>
