--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on July 28,
+  Desktop</strong> and was last updated on July 29,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -7279,18 +7279,19 @@
                   "toc-emacspeak_002dspeak_002dface_002dbackward">12.174.1.34
                   emacspeak-speak-face-backward</a></li>
                   <li><a id=
+                  "toc-emacspeak_002dspeak_002dface_002dbrowse"
+                  href=
+                  "emacspeak_002dspeak.html#emacspeak_002dspeak_002dface_002dbrowse"
+                  name=
+                  "toc-emacspeak_002dspeak_002dface_002dbrowse">12.174.1.35
+                  emacspeak-speak-face-browse</a></li>
+                  <li><a id=
                   "toc-emacspeak_002dspeak_002dface_002dforward"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dface_002dforward"
                   name=
-                  "toc-emacspeak_002dspeak_002dface_002dforward">12.174.1.35
+                  "toc-emacspeak_002dspeak_002dface_002dforward">12.174.1.36
                   emacspeak-speak-face-forward</a></li>
-                  <li><a id=
-                  "toc-emacspeak_002dspeak_002dface_002drange"
-                  href="emacspeak_002dspeak.html#emacspeak_002dspeak_002dface_002drange"
-                  name=
-                  "toc-emacspeak_002dspeak_002dface_002drange">12.174.1.36
-                  emacspeak-speak-face-range</a></li>
                   <li><a id="toc-emacspeak_002dspeak_002dfield"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dfield"
@@ -7461,17 +7462,23 @@
                   name=
                   "toc-emacspeak_002dspeak_002dprevious_002dfield">12.174.1.60
                   emacspeak-speak-previous-field</a></li>
+                  <li><a id="toc-emacspeak_002dspeak_002drange"
+                  href=
+                  "emacspeak_002dspeak.html#emacspeak_002dspeak_002drange"
+                  name=
+                  "toc-emacspeak_002dspeak_002drange">12.174.1.61
+                  emacspeak-speak-range</a></li>
                   <li><a id="toc-emacspeak_002dspeak_002drectangle"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002drectangle"
                   name=
-                  "toc-emacspeak_002dspeak_002drectangle">12.174.1.61
+                  "toc-emacspeak_002dspeak_002drectangle">12.174.1.62
                   emacspeak-speak-rectangle</a></li>
                   <li><a id="toc-emacspeak_002dspeak_002dregion"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dregion"
                   name=
-                  "toc-emacspeak_002dspeak_002dregion">12.174.1.62
+                  "toc-emacspeak_002dspeak_002dregion">12.174.1.63
                   emacspeak-speak-region</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002drest_002dof_002dbuffer"
@@ -7479,7 +7486,7 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002drest_002dof_002dbuffer"
                   name=
                   "toc-emacspeak_002dspeak_002drest_002dof_002dbuffer">
-                  12.174.1.63
+                  12.174.1.64
                   emacspeak-speak-rest-of-buffer</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002drun_002dshell_002dcommand"
@@ -7487,7 +7494,7 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002drun_002dshell_002dcommand"
                   name=
                   "toc-emacspeak_002dspeak_002drun_002dshell_002dcommand">
-                  12.174.1.64
+                  12.174.1.65
                   emacspeak-speak-run-shell-command</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dseconds_002dsince_002depoch"
@@ -7495,18 +7502,18 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dseconds_002dsince_002depoch"
                   name=
                   "toc-emacspeak_002dspeak_002dseconds_002dsince_002depoch">
-                  12.174.1.65
+                  12.174.1.66
                   emacspeak-speak-seconds-since-epoch</a></li>
                   <li><a id="toc-emacspeak_002dspeak_002dsentence"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dsentence"
                   name=
-                  "toc-emacspeak_002dspeak_002dsentence">12.174.1.66
+                  "toc-emacspeak_002dspeak_002dsentence">12.174.1.67
                   emacspeak-speak-sentence</a></li>
                   <li><a id="toc-emacspeak_002dspeak_002dsexp"
                   href="emacspeak_002dspeak.html#emacspeak_002dspeak_002dsexp"
                   name=
-                  "toc-emacspeak_002dspeak_002dsexp">12.174.1.67
+                  "toc-emacspeak_002dspeak_002dsexp">12.174.1.68
                   emacspeak-speak-sexp</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dsexp_002dinteractively"
@@ -7514,14 +7521,14 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dsexp_002dinteractively"
                   name=
                   "toc-emacspeak_002dspeak_002dsexp_002dinteractively">
-                  12.174.1.68
+                  12.174.1.69
                   emacspeak-speak-sexp-interactively</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dskim_002dbuffer"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dskim_002dbuffer"
                   name=
-                  "toc-emacspeak_002dspeak_002dskim_002dbuffer">12.174.1.69
+                  "toc-emacspeak_002dspeak_002dskim_002dbuffer">12.174.1.70
                   emacspeak-speak-skim-buffer</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dspaces_002dat_002dpoint"
@@ -7529,7 +7536,7 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dspaces_002dat_002dpoint"
                   name=
                   "toc-emacspeak_002dspeak_002dspaces_002dat_002dpoint">
-                  12.174.1.70
+                  12.174.1.71
                   emacspeak-speak-spaces-at-point</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dspell_002dcurrent_002dword"
@@ -7537,40 +7544,25 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dspell_002dcurrent_002dword"
                   name=
                   "toc-emacspeak_002dspeak_002dspell_002dcurrent_002dword">
-                  12.174.1.71
+                  12.174.1.72
                   emacspeak-speak-spell-current-word</a></li>
                   <li><a id="toc-emacspeak_002dspeak_002dtime"
                   href="emacspeak_002dspeak.html#emacspeak_002dspeak_002dtime"
                   name=
-                  "toc-emacspeak_002dspeak_002dtime">12.174.1.72
+                  "toc-emacspeak_002dspeak_002dtime">12.174.1.73
                   emacspeak-speak-time</a></li>
-                  <li><a id=
-                  "toc-emacspeak_002dspeak_002dunface_002dbackward"
-                  href=
-                  "emacspeak_002dspeak.html#emacspeak_002dspeak_002dunface_002dbackward"
-                  name=
-                  "toc-emacspeak_002dspeak_002dunface_002dbackward">
-                  12.174.1.73
-                  emacspeak-speak-unface-backward</a></li>
-                  <li><a id=
-                  "toc-emacspeak_002dspeak_002dunface_002dforward"
-                  href=
-                  "emacspeak_002dspeak.html#emacspeak_002dspeak_002dunface_002dforward"
-                  name=
-                  "toc-emacspeak_002dspeak_002dunface_002dforward">12.174.1.74
-                  emacspeak-speak-unface-forward</a></li>
                   <li><a id="toc-emacspeak_002dspeak_002dversion"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dversion"
                   name=
-                  "toc-emacspeak_002dspeak_002dversion">12.174.1.75
+                  "toc-emacspeak_002dspeak_002dversion">12.174.1.74
                   emacspeak-speak-version</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dvisual_002dline"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dvisual_002dline"
                   name=
-                  "toc-emacspeak_002dspeak_002dvisual_002dline">12.174.1.76
+                  "toc-emacspeak_002dspeak_002dvisual_002dline">12.174.1.75
                   emacspeak-speak-visual-line</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dvoice_002dannotate_002dparagraphs"
@@ -7578,14 +7570,14 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dvoice_002dannotate_002dparagraphs"
                   name=
                   "toc-emacspeak_002dspeak_002dvoice_002dannotate_002dparagraphs">
-                  12.174.1.77
+                  12.174.1.76
                   emacspeak-speak-voice-annotate-paragraphs</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dwhich_002dfunction"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dwhich_002dfunction"
                   name=
-                  "toc-emacspeak_002dspeak_002dwhich_002dfunction">12.174.1.78
+                  "toc-emacspeak_002dspeak_002dwhich_002dfunction">12.174.1.77
                   emacspeak-speak-which-function</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dwindow_002dinformation"
@@ -7593,12 +7585,12 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dwindow_002dinformation"
                   name=
                   "toc-emacspeak_002dspeak_002dwindow_002dinformation">
-                  12.174.1.79
+                  12.174.1.78
                   emacspeak-speak-window-information</a></li>
                   <li><a id="toc-emacspeak_002dspeak_002dword"
                   href="emacspeak_002dspeak.html#emacspeak_002dspeak_002dword"
                   name=
-                  "toc-emacspeak_002dspeak_002dword">12.174.1.80
+                  "toc-emacspeak_002dspeak_002dword">12.174.1.79
                   emacspeak-speak-word</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dword_002dinteractively"
@@ -7606,14 +7598,14 @@
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dword_002dinteractively"
                   name=
                   "toc-emacspeak_002dspeak_002dword_002dinteractively">
-                  12.174.1.81
+                  12.174.1.80
                   emacspeak-speak-word-interactively</a></li>
                   <li><a id=
                   "toc-emacspeak_002dspeak_002dworld_002dclock"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dspeak_002dworld_002dclock"
                   name=
-                  "toc-emacspeak_002dspeak_002dworld_002dclock">12.174.1.82
+                  "toc-emacspeak_002dspeak_002dworld_002dclock">12.174.1.81
                   emacspeak-speak-world-clock</a></li>
                   <li><a id=
                   "toc-emacspeak_002dswitch_002dto_002dreference_002dbuffer"
@@ -7621,14 +7613,14 @@
                   "emacspeak_002dspeak.html#emacspeak_002dswitch_002dto_002dreference_002dbuffer"
                   name=
                   "toc-emacspeak_002dswitch_002dto_002dreference_002dbuffer">
-                  12.174.1.83
+                  12.174.1.82
                   emacspeak-switch-to-reference-buffer</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002daction_002dmode"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dtoggle_002daction_002dmode"
                   name=
-                  "toc-emacspeak_002dtoggle_002daction_002dmode">12.174.1.84
+                  "toc-emacspeak_002dtoggle_002daction_002dmode">12.174.1.83
                   emacspeak-toggle-action-mode</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002daudio_002dindentation"
@@ -7636,7 +7628,7 @@
                   "emacspeak_002dspeak.html#emacspeak_002dtoggle_002daudio_002dindentation"
                   name=
                   "toc-emacspeak_002dtoggle_002daudio_002dindentation">
-                  12.174.1.85
+                  12.174.1.84
                   emacspeak-toggle-audio-indentation</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002dcharacter_002decho"
@@ -7644,34 +7636,34 @@
                   "emacspeak_002dspeak.html#emacspeak_002dtoggle_002dcharacter_002decho"
                   name=
                   "toc-emacspeak_002dtoggle_002dcharacter_002decho">
-                  12.174.1.86
+                  12.174.1.85
                   emacspeak-toggle-character-echo</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002dheader_002dline"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dtoggle_002dheader_002dline"
                   name=
-                  "toc-emacspeak_002dtoggle_002dheader_002dline">12.174.1.87
+                  "toc-emacspeak_002dtoggle_002dheader_002dline">12.174.1.86
                   emacspeak-toggle-header-line</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002dline_002decho"
                   href="emacspeak_002dspeak.html#emacspeak_002dtoggle_002dline_002decho"
                   name=
-                  "toc-emacspeak_002dtoggle_002dline_002decho">12.174.1.88
+                  "toc-emacspeak_002dtoggle_002dline_002decho">12.174.1.87
                   emacspeak-toggle-line-echo</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002dmail_002dalert"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dtoggle_002dmail_002dalert"
                   name=
-                  "toc-emacspeak_002dtoggle_002dmail_002dalert">12.174.1.89
+                  "toc-emacspeak_002dtoggle_002dmail_002dalert">12.174.1.88
                   emacspeak-toggle-mail-alert</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002dshow_002dpoint"
                   href=
                   "emacspeak_002dspeak.html#emacspeak_002dtoggle_002dshow_002dpoint"
                   name=
-                  "toc-emacspeak_002dtoggle_002dshow_002dpoint">12.174.1.90
+                  "toc-emacspeak_002dtoggle_002dshow_002dpoint">12.174.1.89
                   emacspeak-toggle-show-point</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter"
@@ -7679,7 +7671,7 @@
                   "emacspeak_002dspeak.html#emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter"
                   name=
                   "toc-emacspeak_002dtoggle_002dspeak_002dline_002dinvert_002dfilter">
-                  12.174.1.91
+                  12.174.1.90
                   emacspeak-toggle-speak-line-invert-filter</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002dspeak_002dmessages"
@@ -7687,23 +7679,23 @@
                   "emacspeak_002dspeak.html#emacspeak_002dtoggle_002dspeak_002dmessages"
                   name=
                   "toc-emacspeak_002dtoggle_002dspeak_002dmessages">
-                  12.174.1.92
+                  12.174.1.91
                   emacspeak-toggle-speak-messages</a></li>
                   <li><a id=
                   "toc-emacspeak_002dtoggle_002dword_002decho"
                   href="emacspeak_002dspeak.html#emacspeak_002dtoggle_002dword_002decho"
                   name=
-                  "toc-emacspeak_002dtoggle_002dword_002decho">12.174.1.93
+                  "toc-emacspeak_002dtoggle_002dword_002decho">12.174.1.92
                   emacspeak-toggle-word-echo</a></li>
                   <li><a id=
                   "toc-emacspeak_002dview_002dnotifications" href=
                   "emacspeak_002dspeak.html#emacspeak_002dview_002dnotifications"
                   name=
-                  "toc-emacspeak_002dview_002dnotifications">12.174.1.94
+                  "toc-emacspeak_002dview_002dnotifications">12.174.1.93
                   emacspeak-view-notifications</a></li>
                   <li><a id="toc-emacspeak_002dzap_002dtts" href=
                   "emacspeak_002dspeak.html#emacspeak_002dzap_002dtts"
-                  name="toc-emacspeak_002dzap_002dtts">12.174.1.95
+                  name="toc-emacspeak_002dzap_002dtts">12.174.1.94
                   emacspeak-zap-tts</a></li>
                 </ul>
               </li>
