--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -268,15 +268,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-_002c"><code>&lt;fn&gt;
-      ,</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-_003cfn_003e-_002f"><code>&lt;fn&gt;
       /</code></a>:</td>
       <td>&nbsp;</td>
@@ -543,6 +534,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-_003cfn_003e-C_002d_003creturn_003e">
+      <code>&lt;fn&gt; C-&lt;return&gt;</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3511,15 +3511,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-_002c"><code>C-e
-      ,</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "Reading.html#index-C_002de-_002f"><code>C-e
       /</code></a>:</td>
       <td>&nbsp;</td>
@@ -3826,6 +3817,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-C_002de-C_002d_003creturn_003e">
+      <code>C-e C-&lt;return&gt;</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
