--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -1603,10 +1603,12 @@ any other key to speak entire sexp.
     <strong>emacspeak-speak-skim-buffer</strong></dt>
     <dd>
       <dl compact="compact">
-        <dt><kbd>C-e ,</kbd></dt>
-        <dd><span id="index-C_002de-_002c"></span></dd>
-        <dt><kbd>&lt;fn&gt; ,</kbd></dt>
-        <dd><span id="index-_003cfn_003e-_002c"></span></dd>
+        <dt><kbd>C-e C-&lt;return&gt;</kbd></dt>
+        <dd><span id=
+        "index-C_002de-C_002d_003creturn_003e"></span></dd>
+        <dt><kbd>&lt;fn&gt; C-&lt;return&gt;</kbd></dt>
+        <dd><span id=
+        "index-_003cfn_003e-C_002d_003creturn_003e"></span></dd>
       </dl><span id=
       "index-emacspeak_002dspeak_002dskim_002dbuffer-1"></span>
       <div class="format">
